--- a/css/global.scss
+++ b/css/global.scss
@@ -1,26 +1,16 @@
 $font-stack: 'Source Sans Pro', sans-serif;
 
-//color palette
-//$carolina-blue: #56A0D3;
-//$carolina-alt: #2E78AB;
-//$state-red: #CC0000;
-//$state-alt: #A40000;
 $main-text: #000000;
 $white: #FFFFFF;
 $dark-gray: #333333;
 $light-gray: #CCCCCC;
-
-//$primary: #ff4700;
 $primary: #3D015C;
-//$primary-alt: #D72500;
 $primary-alt: #6F338E;
 $header: #CCCCCC;
 $background: #FAFAFA;
-
 $main-text: #000000;
 $nav-text: #000000;
 $nav-hover: $primary;
-
 
 body {
 	font-family: 100% $font-stack;
@@ -32,6 +22,16 @@ a, p, h2, h3, {
 }
 html {
     font-size: 100%;
+}
+.topimg {
+    width: 312px;
+    height: 404px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.navimg {
+    width: 150px;
+    height: 90px;
 }
 .navbar-nav {
     font-size: 1.4em;
@@ -113,6 +113,9 @@ p {
     font-size: 1em;
     text-align: justify;
 }
+.space {
+    margin-top: 55px;
+}
 .about p {
     font-size: 1.25em;
     font-weight: bold;
@@ -120,7 +123,7 @@ p {
 a.anchor {
     display: block;
     position: relative;
-    top: -250px;
+    //top: -250px;
     visibility: hidden;
 }
 .num {
@@ -157,7 +160,7 @@ a.anchor {
     font-size: 2.5em;
 }
 .bigbtn {
-    margin-top: 10px;
+    margin-top: 25px;
 }
 #headline {
 height:400px;
@@ -178,7 +181,9 @@ background-color: $primary;
     border-top: 1px solid rgb(229, 229, 229);
 }
 .anchor {
-    margin-bottom: 50px;
+    margin-bottom: 75px;
+    padding-top: 100px;
+    margin-top: -100px;
 }
 a {
     color: $primary-alt;
