Added sponsor logos.

--- a/css/global.scss
+++ b/css/global.scss
@@ -140,6 +140,9 @@ a.anchor {
 .sponsor p{
     text-align: center;
 }
+.sponsor img {
+    margin: 10px 0px 10px 0px;
+}
 .faq p {
     text-align: justify;
 }
