--- a/css/global.scss
+++ b/css/global.scss
@@ -24,10 +24,14 @@ html {
     font-size: 100%;
 }
 .topimg {
-    width: 312px;
-    height: 404px;
+    max-height: 404px;
     margin-right: auto;
     margin-left: auto;
+}
+@media (max-width: 560px){
+    .topimg {
+        margin-top: 50%;
+    }
 }
 .navimg {
     width: 74px;
