--- a/css/global.scss
+++ b/css/global.scss
@@ -57,6 +57,9 @@ section {
     padding-left: 0px;
     padding-right: 0px;
 }
+#tagline {
+    z-index: 22;
+}
 #nav.affix {
     position: fixed;
     top: 0;
@@ -137,6 +140,9 @@ a.anchor {
 .panel-body h3{
     font-size: 1.25em;
 }
+.panel {
+    margin-top: 10px;
+}
 .about p {
     text-align: center;
     font-size: 1.5em;
@@ -197,4 +203,21 @@ a {
 }
 a:hover {
     color: $primary;
+}
+#emc {
+   margin-top: 20px; 
+}
+#google {
+    margin-top: 35px;
+}
+#redventures {
+    margin-top: 40px;
+}
+@media (max-width: 560px) {
+    #redventures {
+        margin-top: 10px;
+    }
+}
+#cc {
+    margin-top: -10px;
 }
